--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "build": "export NODE_ENV=production && webpack",
+    "dev": "export NODE_ENV=development && webpack --watch"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
