--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "export NODE_ENV=production && webpack",
-    "dev": "export NODE_ENV=development && webpack --watch"
+    "dev": "export NODE_ENV=development && webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
